FinalRelease/backend/ansible/kubernetes/configs/kibana-proxy/kibana-proxy-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana-proxy-service
spec:
  selector:
    app: kibana-proxy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
