FinalRelease/backend/ansible/kubernetes/configs/kibana-proxy/kibana-proxy-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kibana-proxy-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
        - kibana.fourstring.dev
      secretName: url-shortener-tls
  rules:
    - host: kibana.fourstring.dev
      http:
        paths:
          - path: /
            backend:
              serviceName: kibana-proxy-service
              servicePort: 80
